<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kai Slideshow</string>
    <string name="no_images_message">No images selected</string>
    <string name="no_images_subtitle">Click "Add Files" or "Add Folder" to get started</string>
    <string name="add_files">Add Files</string>
    <string name="add_folder">Add Folder</string>
    <string name="exit">Exit</string>
    <string name="interval_label">Interval:</string>
    <string name="shuffle_label">Shuffle</string>
    <string name="pause_label">PAUSE</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="no_images_found">No images found in the selected folder</string>
    <string name="error_accessing_folder">Error accessing folder</string>
    <string name="storage_permission_rationale">This app needs storage permission to access your images</string>
    <string name="storage_permission_denied">Storage permission is required to use this app</string>
    <string name="donate">Donate</string>
    <string name="prev_image">Previous image</string>
    <string name="next_image">Next image</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="settings">Settings</string>
    <string name="transition_label">Fade Transitions</string>
    <string name="ken_burns_label">Zoom/Pan Effect (Ken Burns)</string>
    <string name="sleep_timer_label">Sleep Timer</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="off">Off</string>
    <string name="minutes_15">15 Minutes</string>
    <string name="minutes_30">30 Minutes</string>
    <string name="hour_1">1 Hour</string>
    <string name="hours_2">2 Hours</string>
    <string name="hours_4">4 Hours</string>
</resources>
