<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/control_bar_height"
    android:background="@drawable/control_bar_bg"
    android:paddingHorizontal="25dp">

    <!-- Interval label -->
    <TextView
        android:id="@+id/intervalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interval_label"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Interval spinner -->
    <Spinner
        android:id="@+id/intervalSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@id/intervalLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Shuffle checkbox and label -->
    <CheckBox
        android:id="@+id/shuffleCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:buttonTint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/intervalSpinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/shuffleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuffle_label"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/shuffleCheckbox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Add Files button -->
    <Button
        android:id="@+id/addFilesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_files"
        android:background="@drawable/btn_rounded"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/addFolderButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Add Folder button -->
    <Button
        android:id="@+id/addFolderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_folder"
        android:background="@drawable/btn_rounded"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/exitButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Exit button -->
    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:background="@drawable/btn_exit_rounded"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
